[package]
name = "wait-online"
version = "0.1.1"
edition = "2021"
default-run = "wait-online"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
nix = { version = "0.27.0", features = ["net"] }

# for minimal-versions
[target.'cfg(any())'.dependencies]
proc-macro2 = { version = "1.0.60", optional = true } # needed to allow clap to build with -Zminimal-versions on nightly (rustc 1.74.0-nightly (1e746d774 2023-09-07))
